--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.52.3",
+    "punycode": "^2.3.1",
     "uuid": "^10.0.0"
   }
 }
